Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rick-service
            port:
              number: 8000
